GH-2638: Silence warnings (works with maven surefire)